--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "\"This is demo of a user Profile\"",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "\"Naveen Singh\"",
