--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "\"This is demo of a user Profile\"",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "\"Naveen Singh\"",
   "license": "ISC",
   "dependencies": {
     "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
